# boss-zhipin-scraper-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.crawler.md  README.en.md  README.md  SKILL.md  pyproject.toml  requirements.txt
scripts/: boss_cdp_raw.py  boss_live_tui.py  boss_message_probe.py  job_summary.py
tests/: test_boss_live_tui.py  test_chrome_setup.py  test_job_summary.py
